<resources>
    <string name="app_name">Movies</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Title</string>
    <string name="plot">Lorem Ipsum Plot</string>
    <string name="releasedate">12 nov. 2020</string>
    <string name="runtime">127 min.</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Movie Reviewer</string>
    <string name="nav_header_subtitle">Add your review now!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="reviews">Reviews</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_overview">Movie Details</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_posters">Posters</string>
    <string name="menu_random_movie">Random Movie</string>
    <string name="author">Author Name</string>
    <string name="comment">This is a long comment. Lorem Ipsum</string>
    <string name="rating">4</string>
    <string name="createdat">12/11/2048</string>
</resources>