<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_overview">

    <fragment
        android:id="@+id/nav_overview"
        android:name="maxim.derboven.moviereviewer.fragments.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/activity_main" />
    <fragment
        android:id="@+id/nav_posters"
        android:name="maxim.derboven.moviereviewer.fragments.PostersFragment"
        android:label="@string/menu_posters"
        tools:layout="@layout/fragment_posters" />
    <fragment
        android:id="@+id/nav_random_movie"
        android:name="maxim.derboven.moviereviewer.fragments.RandomMovie"
        android:label="@string/menu_random_movie"
        tools:layout="@layout/fragment_random_movie" />

</navigation>